<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SensorsTesting</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sensor_info">Sensor info:</string>
    <string name="x_axis">X:</string>
    <string name="y_axis">Y:</string>
    <string name="z_axis">Z:</string>
    <string name="start_btn">Start recording</string>
    <string name="stop_btn">Stop recording</string>
    <string name="send_report">Send report</string>
    <string name="send_report_success">The report was successfuly uploaded on the server!</string>
    <string name="send_report_fail">A problem occurred while trying to upload the report. Please, contact the application developer!</string>
    <string name="recording_started">Recording started!</string>
    <string name="recording_stopped">Recording stopped!</string>
    <string name="lat">Lat:</string>
    <string name="lon">Lon:</string>
    <string name="gps_data">GPS data</string>
    <string name="speed_kmh">Speed (km/h):</string>
    <string name="send_report_requirements">Please, use a working WIFI connection to upload your report.</string>

    <string name="google_maps_key" templateMergeStrategy="preserve">AIzaSyB4zpX3yvjDVhewTST7bK-QHf51hsx1Wdk</string>
    <string name="map_marker_title_1">Marker title...</string>

</resources>
